{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 57,
  "lineage": "9789550d-3d24-f553-2a6d-44182245a9db",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:security-group/sg-02658af68a0f12999",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-02658af68a0f12999",
            "ingress": [],
            "name": "devops-demo-eks-cluster-2025120413145454170000000c",
            "name_prefix": "devops-demo-eks-cluster-",
            "owner_id": "447407244516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-demo-eks-cluster",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-eks-cluster",
              "Project": "devops-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0780c3dbb7cd02d6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:security-group/sg-095bb67728f27759a",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-095bb67728f27759a",
            "ingress": [],
            "name": "devops-demo-eks-node-2025120413145467260000000d",
            "name_prefix": "devops-demo-eks-node-",
            "owner_id": "447407244516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-demo-eks-node",
              "Project": "devops-demo",
              "kubernetes.io/cluster/devops-demo-eks": "owned"
            },
            "tags_all": {
              "Name": "devops-demo-eks-node",
              "Project": "devops-demo",
              "kubernetes.io/cluster/devops-demo-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0780c3dbb7cd02d6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2783936680",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02658af68a0f12999",
            "security_group_rule_id": "sgr-04ff3d366c71f9e46",
            "self": false,
            "source_security_group_id": "sg-095bb67728f27759a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3355155189",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-095bb67728f27759a",
            "security_group_rule_id": "sgr-087178f45576afa9d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-975633947",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095bb67728f27759a",
            "security_group_rule_id": "sgr-0d08d870da9a8a59f",
            "self": false,
            "source_security_group_id": "sg-02658af68a0f12999",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1121727800",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095bb67728f27759a",
            "security_group_rule_id": "sgr-0a2fe5ee7c5b052a4",
            "self": false,
            "source_security_group_id": "sg-02658af68a0f12999",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2342408878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095bb67728f27759a",
            "security_group_rule_id": "sgr-0ccd7e08d0a194580",
            "self": false,
            "source_security_group_id": "sg-02658af68a0f12999",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2562879119",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095bb67728f27759a",
            "security_group_rule_id": "sgr-049bd3575fa2cd138",
            "self": false,
            "source_security_group_id": "sg-02658af68a0f12999",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4234370372",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095bb67728f27759a",
            "security_group_rule_id": "sgr-0dd223f160e8cf776",
            "self": false,
            "source_security_group_id": "sg-02658af68a0f12999",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1269167637",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095bb67728f27759a",
            "security_group_rule_id": "sgr-00f3d2d596d233ca6",
            "self": false,
            "source_security_group_id": "sg-02658af68a0f12999",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3323291316",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095bb67728f27759a",
            "security_group_rule_id": "sgr-065496d8fdff0c778",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1607276181",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095bb67728f27759a",
            "security_group_rule_id": "sgr-0415d27441ded3013",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4220695930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-095bb67728f27759a",
            "security_group_rule_id": "sgr-0e78df467d9ec0887",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:network-acl/acl-0650ea0fcce76773e",
            "default_network_acl_id": "acl-0650ea0fcce76773e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0650ea0fcce76773e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "447407244516",
            "subnet_ids": [
              "subnet-0e33f374f3b35ec02"
            ],
            "tags": {
              "Name": "devops-demo-vpc-default",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-default",
              "Project": "devops-demo"
            },
            "vpc_id": "vpc-0780c3dbb7cd02d6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:route-table/rtb-06c518922a7b5b7f8",
            "default_route_table_id": "rtb-06c518922a7b5b7f8",
            "id": "rtb-06c518922a7b5b7f8",
            "owner_id": "447407244516",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "devops-demo-vpc-default",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-default",
              "Project": "devops-demo"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0780c3dbb7cd02d6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:security-group/sg-00b14a0d2c4efc4dc",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00b14a0d2c4efc4dc",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "447407244516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-demo-vpc-default",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-default",
              "Project": "devops-demo"
            },
            "vpc_id": "vpc-0780c3dbb7cd02d6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044df0b8b82ec3678",
            "arn": "arn:aws:ec2:ap-south-1:447407244516:elastic-ip/eipalloc-044df0b8b82ec3678",
            "domain": "vpc",
            "id": "eipalloc-044df0b8b82ec3678",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-205-6-115.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.205.6.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-demo-vpc-ap-south-1a",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-ap-south-1a",
              "Project": "devops-demo"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:internet-gateway/igw-084c773d9120af03c",
            "id": "igw-084c773d9120af03c",
            "owner_id": "447407244516",
            "tags": {
              "Name": "devops-demo-vpc",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc",
              "Project": "devops-demo"
            },
            "vpc_id": "vpc-0780c3dbb7cd02d6a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044df0b8b82ec3678",
            "association_id": "eipassoc-0747d44e1cadb9246",
            "connectivity_type": "public",
            "id": "nat-012459c862dc4b0b8",
            "network_interface_id": "eni-0fbbaacafdb42f8ed",
            "private_ip": "10.0.3.176",
            "public_ip": "13.205.6.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ccda41b244303432",
            "tags": {
              "Name": "devops-demo-vpc-ap-south-1a",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-ap-south-1a",
              "Project": "devops-demo"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01895c74a100e68631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-012459c862dc4b0b8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01895c74a100e6863",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-084c773d9120af03c",
            "id": "r-rtb-03151d4fe22d192a71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03151d4fe22d192a7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:route-table/rtb-01895c74a100e6863",
            "id": "rtb-01895c74a100e6863",
            "owner_id": "447407244516",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops-demo-vpc-private",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-private",
              "Project": "devops-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0780c3dbb7cd02d6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:route-table/rtb-03151d4fe22d192a7",
            "id": "rtb-03151d4fe22d192a7",
            "owner_id": "447407244516",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "devops-demo-vpc-public",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-public",
              "Project": "devops-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0780c3dbb7cd02d6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036f1c753d9e954e7",
            "route_table_id": "rtb-01895c74a100e6863",
            "subnet_id": "subnet-0d44913ede2cf12a9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddd41c369bb85d88",
            "route_table_id": "rtb-01895c74a100e6863",
            "subnet_id": "subnet-0e33f374f3b35ec02"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0323bcfb0363a7d1d",
            "route_table_id": "rtb-03151d4fe22d192a7",
            "subnet_id": "subnet-0ccda41b244303432"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025bf210c8cf62342",
            "route_table_id": "rtb-03151d4fe22d192a7",
            "subnet_id": "subnet-028354ec827c842c6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:subnet/subnet-0d44913ede2cf12a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d44913ede2cf12a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447407244516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-demo-vpc-private-ap-south-1a",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-private-ap-south-1a",
              "Project": "devops-demo"
            },
            "vpc_id": "vpc-0780c3dbb7cd02d6a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:subnet/subnet-0e33f374f3b35ec02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e33f374f3b35ec02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447407244516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-demo-vpc-private-ap-south-1b",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-private-ap-south-1b",
              "Project": "devops-demo"
            },
            "vpc_id": "vpc-0780c3dbb7cd02d6a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:subnet/subnet-0ccda41b244303432",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccda41b244303432",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447407244516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-demo-vpc-public-ap-south-1a",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-public-ap-south-1a",
              "Project": "devops-demo"
            },
            "vpc_id": "vpc-0780c3dbb7cd02d6a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:subnet/subnet-028354ec827c842c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028354ec827c842c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447407244516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-demo-vpc-public-ap-south-1b",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc-public-ap-south-1b",
              "Project": "devops-demo"
            },
            "vpc_id": "vpc-0780c3dbb7cd02d6a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:447407244516:vpc/vpc-0780c3dbb7cd02d6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0650ea0fcce76773e",
            "default_route_table_id": "rtb-06c518922a7b5b7f8",
            "default_security_group_id": "sg-00b14a0d2c4efc4dc",
            "dhcp_options_id": "dopt-000909d211443294b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0780c3dbb7cd02d6a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c518922a7b5b7f8",
            "owner_id": "447407244516",
            "tags": {
              "Name": "devops-demo-vpc",
              "Project": "devops-demo"
            },
            "tags_all": {
              "Name": "devops-demo-vpc",
              "Project": "devops-demo"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}